css overflow fixes

--- a/jaam/static_media/common/css/app.css
+++ b/jaam/static_media/common/css/app.css
@@ -9,12 +9,13 @@ body {
 }
 .container-center {
     position: absolute;
-    top: 0;
+    top: 20px;
     bottom: 125px;
     right: 0;
     left: 0;
     margin: auto;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 #container {
     height: 474px;
@@ -179,6 +180,9 @@ canvas {
     text-align: center;
     z-index: 3;
 }
+.ribbon-top, .ribbon-bottom {
+    margin-left: 10px;
+}
 .ribbon-top {
     width: 450px;
     height: 80px;
@@ -205,7 +209,7 @@ canvas {
     height: 430px;
     position: relative;
     z-index: 1;
-    margin: -10px 10px;
+    margin: -10px 10px -10px 20px;
     -webkit-box-shadow: rgba(0, 0, 0, 0.9) 0 0 8px;
     -moz-box-shadow: rgba(0, 0, 0, 0.9) 0 0 8px;
     box-shadow: rgba(0, 0, 0, 0.9) 0 0 8px;
@@ -332,7 +336,7 @@ canvas {
 @media all and (max-width: 1023px) and (min-width: 768px) { /*iPad portrait*/
     .container-center {
         width: 768px !important;
-        height: 640px !important;
+        height: 632px !important;
     }
     #container { /* project width */
         width: 684px !important;
@@ -360,7 +364,7 @@ canvas {
 @media all and (min-width: 1024px) { /*iPad landscape and most desktop screens*/
     .container-center {
         width: 1024px !important;
-        height: 555px !important;
+        height: 550px !important;
     }
     #container {
         width: 912px !important;
